Bug 355968 - Moving a layer then undoing the move places the layer on the wrong location
Summary: Moving a layer then undoing the move places the layer on the wrong location
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-26 22:53 UTC by sqdqsddd
Modified: 2015-12-14 20:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sqdqsddd 2015-11-26 22:53:09 UTC
If you move a layer with content, then press ctrl+z to undo that, then the layer (and it's content) will be placed to the wrong location.

Reproducible: Always

Steps to Reproduce:
1.create empty layer
2.draw any content on it
2.5.note the original position of the content on the layer.
3.move the layer around using the move tool.
4.undo the move (ctrl+z, or edit/undo)

Actual Results:  
The content of the layer is placed in a wrong location.

Expected Results:  
The content of the layer should be moved to it's original location.

I noticed that the further away you move the layer, the further away it is positioned incorrectly.
Say you move it by 45 pixels to the right, after undoing, the layer will be 45 pixels to the left of the original position.

Linux mint 17.2, using the 2.9.9 Animation Beta version.
Comment 1 Halla Rempt 2015-12-07 14:46:27 UTC
Hm, this looks specific to the animation branch, because it's fine in 2.9.10.
Comment 2 Dmitry Kazakov 2015-12-14 20:30:58 UTC
Git commit f4ed615794ac7d2722e4fd1a4dfd72191842b2ef by Dmitry Kazakov.
Committed on 14/12/2015 at 20:30.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Fix a bug when cancelling a Move Stroke

There was a refactoring that changed the meaning of moveAndUpdate() call.
Now the offset shows an absolute value.

M  +1    -1    krita/plugins/tools/defaulttools/strokes/move_stroke_strategy.cpp

http://commits.kde.org/calligra/f4ed615794ac7d2722e4fd1a4dfd72191842b2ef
Comment 3 Dmitry Kazakov 2015-12-14 20:39:17 UTC
Git commit aec411c7c367091410e5afbcb33b3678d1baa60c by Dmitry Kazakov.
Committed on 14/12/2015 at 20:31.
Pushed by dkazakov into branch 'master'.

Fix a bug when cancelling a Move Stroke

There was a refactoring that changed the meaning of moveAndUpdate() call.
Now the offset shows an absolute value.

M  +1    -1    krita/plugins/tools/defaulttools/strokes/move_stroke_strategy.cpp

http://commits.kde.org/krita/aec411c7c367091410e5afbcb33b3678d1baa60c