Fix a bug when cancelling a Move Stroke

There was a refactoring that changed the meaning of moveAndUpdate() call.
Now the offset shows an absolute value.

BUG:355968